fix footer alignment

--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -98,7 +98,6 @@ footer {
 #footer-content {
   position: absolute;
   bottom: 0;
-  left: 10px;
   margin: 2px auto;
   color: white;
   font-size: 1em;
